2011-04-10  Juergen Weinberger  <gamsta@gmx.net>
	* added boost unittests

2011-04-09  Juergen Weinberger  <gamsta@gmx.net>
	* examples/tests moved to testsuite/tests
	* run-dlvhex-tests.sh updated for new test dir
	* testsuite/Makefile.am updated for new test dir

2010-09-28  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Setup Boost.Test environment.
	* testsuite/xpath-unittest.cpp: Likewise.
	* examples/Makefile.am: Likewise.

	* src/xpathplugin.cpp: Move PLUGINIMPORTFUNCTION here.

	* include/xpathatom.hpp: Add include guards.
	* include/xpathplugin.hpp: Likewise.

	* configure.ac: Check for Boost.Test library.

	* Makefile.am (SUBDIRS): Add testsuite.

	* src/Makefile.am (AM_CPPFLAGS): Add BOOST_CPPFLAGS.
	(noinst_LTLIBRARIES): Build a non-module libdlvhexxpath-test.la library.

2010-09-09  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/Makefile.am: Add LIBXML2_CFLAGS and LIBXML2_LIBS.

2010-09-09  Juergen Weinberger  <gamsta@gmx.net>
	* MyErrorhandler.cpp/.hpp: Removed no longer needed
	* include/xpathatom.hpp: Removed xerces and xalan; added xmllib; refactored
	* src/xpathatom.cpp: Removed xerces and xalan; added xmllib; refactored
	* examples/: Moved the tests and the xml file to the example directory
	* examples/tests: Moved the testscript and the answer files to the tests directory
	* examples/Makefile.am: added makefile.am
	* testsuit/: Removed
	* Makefile.am: Xerces and Xalan dependencies removed and xmllib added; updated
	* configure.ac: updated

2010-09-02  Juergen Weinberger  <gamsta@gmx.net>
	* include/: Seperated the classes into cpp and header files
	* include/Makefile.am: Added
	* include/xpathatom.hpp: Seperated the xpathatom in it's own file
	* src/xpathatom.cpp: Seperated the xpathatom in it's own file
	* src/xpathplugin.cpp: Refactored to work with the plugin interface again (boost::shared_ptr added)
	* Makefile.am: Updated to use the include dir
	* testsuit/run-dlvhex-test.sh: modified to work again
