@@ -3,7 +3,8 @@ EXTRA_DIST = \
     tests/keywords.out \
     tests/nobelprice.out \
     tests/scientists.out \
-    tests/run-dlvhex-tests.sh
+    tests/run-dlvhex-tests.sh \ 
+    answerset_compare.py
 
 # global preprocessor flags
 AM_CPPFLAGS = \
@@ -14,18 +15,15 @@ AM_CPPFLAGS = \
 # global linker flags
 AM_LDFLAGS = $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS)
 
-#TESTS = tests/run-dlvhex-tests.sh
-#TESTS_ENVIRONMENT = DLVHEX=dlvhex TESTDIR=$(top_srcdir)/testsuite/tests PARAMETERS="-s --plugindir=$(top_builddir)/src/.libs <-- !!! NOT WORKING, WHY !!!"
-
 # global libs
 LIBS = $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(LIBXML2_LIBS) $(DLVHEX_LIBS)
 
 TESTS = xpath-unittest \
         tests/run-dlvhex-tests.sh
         
-TESTS_ENVIRONMENT = EXAMPLESDIR=$(top_builddir)/examples BOOST_TEST_LOG_LEVEL=all BOOST_TEST_SHOW_PROGRESS=yes DLVHEX=dlvhex TESTDIR=$(top_srcdir)/testsuite/tests PARAMETERS="-s"
+TESTS_ENVIRONMENT = TOPSRCDIR=$(top_srcdir) TOPBUILDDIR=$(top_builddir) BOOST_TEST_LOG_LEVEL=all BOOST_TEST_SHOW_PROGRESS=yes
 
 check_PROGRAMS = xpath-unittest
 
 xpath_unittest_SOURCES = xpath-unittest.cpp
-xpath_unittest_LDADD = $(top_builddir)/src/libdlvhexxpath-test.la
+xpath_unittest_LDADD = $(top_builddir)/src/libxpath-test.la
