@@ -14,11 +14,11 @@ using namespace dlvhex::xpath;
 // Test loading of a not existing xml file
 BOOST_AUTO_TEST_CASE( XPathAtomTest_LoadNoneExistingXML )
 {
-  const char* ex = getenv("EXAMPLESDIR");
+  const char* ex = getenv("TOPSRCDIR");
   assert (ex != 0);
   
   std::string xmlfile(ex);
-  xmlfile += "/notexisting.xml";
+  xmlfile += "/examples/notexisting.xml";
   
   XPathAtom* xa = new XPathAtom;
   BOOST_CHECK(xa != 0);
@@ -32,11 +32,11 @@ BOOST_AUTO_TEST_CASE( XPathAtomTest_LoadNoneExistingXML )
 // Test loading and evaluating an invalid xml file
 BOOST_AUTO_TEST_CASE( XPathAtomTest_LoadInvalidXML )
 {
-  const char* ex = getenv("EXAMPLESDIR");
+  const char* ex = getenv("TOPSRCDIR");
   assert (ex != 0);
   
   std::string xmlfile(ex);
-  xmlfile += "/scientists_err.xml";
+  xmlfile += "/examples/scientists_err.xml";
   
   XPathAtom* xa = new XPathAtom;
   BOOST_CHECK(xa != 0);
@@ -50,11 +50,11 @@ BOOST_AUTO_TEST_CASE( XPathAtomTest_LoadInvalidXML )
 // Test evaluating an invalid query
 BOOST_AUTO_TEST_CASE( XPathAtomTest_EvaluateInvalidQuery )
 {
-  const char* ex = getenv("EXAMPLESDIR");
+  const char* ex = getenv("TOPSRCDIR");
   assert (ex != 0);
   
   std::string xmlfile(ex);
-  xmlfile += "/scientists.xml";
+  xmlfile += "/examples/scientists.xml";
   
   XPathAtom* xa = new XPathAtom;
   BOOST_CHECK(xa != 0);
@@ -68,11 +68,11 @@ BOOST_AUTO_TEST_CASE( XPathAtomTest_EvaluateInvalidQuery )
 // Test evaluating an empty query
 BOOST_AUTO_TEST_CASE( XPathAtomTest_EmptyQuery )
 {
-  const char* ex = getenv("EXAMPLESDIR");
+  const char* ex = getenv("TOPSRCDIR");
   assert (ex != 0);
   
   std::string xmlfile(ex);
-  xmlfile += "/scientists.xml";
+  xmlfile += "/examples/scientists.xml";
   
   XPathAtom* xa = new XPathAtom;
   BOOST_CHECK(xa != 0);
@@ -87,11 +87,11 @@ BOOST_AUTO_TEST_CASE( XPathAtomTest_EmptyQuery )
 // Test evaluating a none atomic query
 BOOST_AUTO_TEST_CASE( XPathAtomTest_NotAtomicOnlyQuery )
 {
-  const char* ex = getenv("EXAMPLESDIR");
+  const char* ex = getenv("TOPSRCDIR");
   assert (ex != 0);
   
   std::string xmlfile(ex);
-  xmlfile += "/scientists.xml";
+  xmlfile += "/examples/scientists.xml";
   
   XPathAtom* xa = new XPathAtom;
   BOOST_CHECK(xa != 0);
@@ -106,11 +106,11 @@ BOOST_AUTO_TEST_CASE( XPathAtomTest_NotAtomicOnlyQuery )
 // Tests loading and evaluating of a valid xml file and query
 BOOST_AUTO_TEST_CASE( XPathAtomTest_AllValid )
 {
-  const char* ex = getenv("EXAMPLESDIR");
+  const char* ex = getenv("TOPSRCDIR");
   assert (ex != 0);
   
   std::string xmlfile(ex);
-  xmlfile += "/scientists.xml";
+  xmlfile += "/examples/scientists.xml";
   
   XPathAtom* xa = new XPathAtom;
   BOOST_CHECK(xa != 0);
